cria a class logo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <header>
         <div class = "container" >
+            <div class = "logo">
             <h2>NETFLIX</h2>
 
             <nav>
