Estiliza elementos do menu principal

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             </nav>
         </div>
     </header>
-
+    <div class="filme-principal">
+        <div class="container"></div>
+            <h3>The Good Doctor: O Bom Doutor </h3>
+            <div class="descricao"></div>Um jovem médico com autismo começa a trabalhar em um famoso hospital. Além dos desafios da profissão, ele terá também que provar sua capacidade a seus colegas e superiores.
+        </div>  
+    </div>
 </body>
 </html>
