--- a/index.html
+++ b/index.html
@@ -29,9 +29,20 @@
     <div class="filme-principal">
         <div class="container">
             <h3 class = "titulo">THE GOOD DOCTOR: O Bom Doutor" </h3>
-            <div class="descricao"></div>Um jovem médico com autismo começa a trabalhar em um famoso hospital. Além dos desafios da profissão, ele terá também que provar sua capacidade a seus colegas e superiores.
+            <p class="descricao">Um jovem médico com autismo começa a trabalhar em um famoso hospital. Além dos desafios da profissão, ele terá também que provar sua capacidade 
+            a seus colegas e superiores.</p>
         </div>
+        
+        <button role="button" class ="botao">
+
+            ASSISTIR AGORA
+        </button>
+        <button role="button" class ="botao">
+            MAIS INFORMAÇÕES
+
+         </button>
+
     </div>
-    </main>
+    
 </body>
 </html>
