--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="filme-principal">
         <div class="container">
             <h3 class = "titulo">THE GOOD DOCTOR: O Bom Doutor" </h3>
-            <p class="descricao">Um jovem médico com autismo começa a trabalhar em um famoso hospital. Além dos desafios da profissão, ele terá também que provar sua capacidade a seus colegas e superiores.</p>
+            <p class="descricao">Um jovem médico com autismo começa a trabalhar em um famoso hospital. Além dos desafios da profissão, ele <br>terá também que provar sua capacidade a seus colegas e superiores. Não deixe de assistir essa surpreendente história <br>que vem encantando públicos do mundo inteiro!</p>
             <button role="button" class ="botao">
 
                 ASSISTIR AGORA
